--- a/package.json
+++ b/package.json
@@ -1,27 +1,7 @@
 {
-  "name": "temp-mail-backend",
-  "version": "0.1.0",
-  "bin": {
-    "temp-mail-backend": "bin/temp-mail-backend.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
-  },
+  "name": "root",
+  "private": true,
   "devDependencies": {
-    "@aws-cdk/assert": "1.52.0",
-    "@types/jest": "^25.2.1",
-    "@types/node": "10.17.5",
-    "jest": "^25.5.0",
-    "ts-jest": "^25.3.1",
-    "aws-cdk": "1.52.0",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.7.2"
-  },
-  "dependencies": {
-    "@aws-cdk/core": "1.52.0",
-    "source-map-support": "^0.5.16"
+    "lerna": "^3.22.1"
   }
 }
