--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "aws-sdk": "^2.709.0",
-    "dynamodb-toolbox": "^0.2.0-beta.1"
+    "dynamodb-toolbox": "^0.2.0-beta.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.62",
